testsuite/escript/classes/fail-global-func-undefined.err
fail-global-func-undefined.src:14:9: error: User function 'super' not found